--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ไม่มีทุนเราจัดให้</title>
+  <title>มาเอากับหนูสิ</title>
   <meta property="og:locale" content="th_TH">
   <meta property="og:type" content="game mobile">
 
@@ -18,7 +18,7 @@
 
 
 <body class="d-flex h-100 text-center" style="height:100vh !important;
-        background-image: url('https://www.img.in.th/images/47501f2bf8f089e18300d04fbbf8a593.jpg');
+        background-image: url('https://sv1.picz.in.th/images/2022/05/13/HcliDn.jpg');
         /* background: linear-gradient(to bottom,#51010a 40%,#55000a 80%); */
         background-repeat: no-repeat;
         background-size: cover;
@@ -29,9 +29,9 @@
     <main class="card-columns mx-auto d-flex justify-content-center col-12 col-sm-6">
       <div class="card" style="background: rgb(0 0 0 / 60%);margin-top: 0px;border: 0px;border-radius: 15px;">
         <div class="card-body p-3 p-sm-4">
-          <!--img src="https://www.img.in.th/images/47501f2bf8f089e18300d04fbbf8a593.jpg" class="img-fluid" style="width: 50%;"-->
+          <!--img src="https://sv1.picz.in.th/images/2022/05/13/HcliDn.jpg" class="img-fluid" style="width: 50%;"-->
           <!--ส่วนรูปโปรโมชั่น และ ลิ้งออกจากรูปภาพ-->
-          <img src="https://www.img.in.th/images/47501f2bf8f089e18300d04fbbf8a593.jpg" class="img-fluid" style="width: 450px;border-radius: 15px;">
+          <img src="https://sv1.picz.in.th/images/2022/05/13/HcliDn.jpg" class="img-fluid" style="width: 450px;border-radius: 15px;">
           
           <p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;">กิจกรรมรับเครดิตฟรี </p>
           <div class="d-grid gap-2 col-10 mx-auto">
@@ -52,28 +52,30 @@
     async function sendShare() {
       const result = await liff.shareTargetPicker([{
         "type": "flex",
-        "altText": "รับง่ายไม่ต้องฝาก",
+        "altText": "พี่จ๋ามาเอากับหนูสิ",
     "type": "flex",
     "contents": 
     {
   "type": "bubble",
   "hero": {
     "type": "image",
-    "url": "https://www.img.in.th/images/47501f2bf8f089e18300d04fbbf8a593.jpg",
+    "url": "https://sv1.picz.in.th/images/2022/05/13/HcliDn.jpg",
+    "align": "start",
+    "gravity": "top",
     "size": "full",
     "aspectRatio": "20:20",
     "aspectMode": "cover",
     "action": {
       "type": "uri",
       "label": "Action",
-      "uri": "https://lin.ee/rodTMiR"
+      "uri": "https://lin.ee/s0ifZpY"
     }
   },
   "body": {
     "type": "box",
     "layout": "horizontal",
     "spacing": "md",
-    "backgroundColor": "#E81004FF",
+    "backgroundColor": "#0F0201FF",
     "contents": [
       {
         "type": "box",
@@ -82,7 +84,7 @@
         "contents": [
           {
             "type": "image",
-            "url": "https://www.img.in.th/images/feab0a0a0ed79c2b632b7abbdc9bbbdd.jpg",
+            "url": "https://sv1.picz.in.th/images/2022/05/13/HclORD.jpg",
             "gravity": "bottom",
             "size": "sm",
             "aspectRatio": "4:4",
@@ -90,7 +92,7 @@
           },
           {
             "type": "image",
-            "url": "https://www.img.in.th/images/18fd912ba408091ac033573ac787d5b5.jpg",
+            "url": "https://sv1.picz.in.th/images/2022/05/13/Hclo1b.jpg",
             "margin": "md",
             "size": "sm",
             "aspectRatio": "4:4",
@@ -105,7 +107,7 @@
         "contents": [
           {
             "type": "text",
-            "text": "โบนัสยอดฮิต 200%",
+            "text": "โบนัสยอดฮิต 100%",
             "weight": "bold",
             "size": "lg",
             "color": "#F6F3F7FF",
@@ -122,7 +124,7 @@
               "uri": "https://www.autoallslot.com/"
             },
             "flex": 1,
-            "color": "#66EA16FF",
+            "color": "#EA1616FF",
             "style": "primary"
           },
           {
@@ -142,7 +144,7 @@
               "label": "คลิก",
               "uri": "https://www.autoallslot.com/"
             },
-            "color": "#66EA16FF",
+            "color": "#EA1616FF",
             "style": "primary"
           }
         ]
@@ -152,16 +154,16 @@
   "footer": {
     "type": "box",
     "layout": "horizontal",
-    "backgroundColor": "#E81004FF",
+    "backgroundColor": "#0F0201FF",
     "contents": [
       {
         "type": "button",
         "action": {
           "type": "uri",
           "label": "รับเครดิตฟรี",
-          "uri": "https://lin.ee/rodTMiR"
+          "uri": "https://lin.ee/s0ifZpY"
         },
-        "color": "#66EA16FF",
+        "color": "#EA1616FF",
         "style": "primary",
         "gravity": "bottom"
       }
@@ -191,7 +193,7 @@
     }
     async function main() {
       await liff.init({
-        liffId: "1657099299-NKprmW55"
+        liffId: "1657131846-7yXEvNDd"
       })
       if (!liff.isLoggedIn()) {
         liff.login()
